[gd_scene load_steps=5 format=3 uid="uid://bp0kew303x26e"]

[ext_resource type="Script" uid="uid://bmp48twfaeuyg" path="res://scripts/level_select.gd" id="1_2epne"]
[ext_resource type="Texture2D" uid="uid://tmhu5rx5w0py" path="res://assets/kenney_physics-assets/PNG/Backgrounds/blue_grass.png" id="2_rif6e"]
[ext_resource type="Texture2D" uid="uid://cqd6rw1gqwkmk" path="res://assets/lock.png" id="3_chg43"]
[ext_resource type="Texture2D" uid="uid://3ffrr0vsiu31" path="res://assets/left_arrow.png" id="4_rif6e"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_2epne")

[node name="BlueGrass" type="Sprite2D" parent="."]
position = Vector2(576, 376)
scale = Vector2(1.125, 1.0625)
texture = ExtResource("2_rif6e")

[node name="Level Select" type="Label" parent="."]
offset_left = 128.0
offset_right = 1024.0
offset_bottom = 128.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 60
text = "LEVEL SELECT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level1" type="Label" parent="."]
offset_left = 360.0
offset_top = 160.0
offset_right = 410.0
offset_bottom = 183.0
text = "Level1"

[node name="Level2" type="Label" parent="."]
offset_left = 552.0
offset_top = 160.0
offset_right = 602.0
offset_bottom = 183.0
text = "Level2"

[node name="Level3" type="Label" parent="."]
offset_left = 744.0
offset_top = 160.0
offset_right = 794.0
offset_bottom = 183.0
text = "Level3"

[node name="lvl1_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 320.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 320.0

[node name="lvl2_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 512.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 320.0

[node name="lvl3_button" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 704.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 320.0

[node name="lvl1_completed" type="ColorRect" parent="."]
offset_left = 320.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 320.0
color = Color(0.31666672, 1, 0, 1)

[node name="lvl2_completed" type="ColorRect" parent="."]
offset_left = 512.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 320.0
color = Color(0.31666672, 1, 0, 1)

[node name="lvl3_completed" type="ColorRect" parent="."]
offset_left = 704.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 320.0
color = Color(0.31666672, 1, 0, 1)

[node name="lvl1_locked" type="ColorRect" parent="."]
offset_left = 320.0
offset_top = 192.0
offset_right = 448.0
offset_bottom = 320.0
color = Color(1, 0, 0, 1)

[node name="lvl2_locked" type="ColorRect" parent="."]
offset_left = 512.0
offset_top = 192.0
offset_right = 640.0
offset_bottom = 320.0
color = Color(1, 0, 0, 1)

[node name="lvl3_locked" type="ColorRect" parent="."]
offset_left = 704.0
offset_top = 192.0
offset_right = 832.0
offset_bottom = 320.0
color = Color(1, 0, 0, 1)

[node name="Lock1" type="Sprite2D" parent="."]
position = Vector2(576, 256)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_chg43")

[node name="Lock2" type="Sprite2D" parent="."]
position = Vector2(768, 256)
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_chg43")

[node name="LeftArrow" type="Sprite2D" parent="."]
position = Vector2(95.2, 544.8)
scale = Vector2(0.12812501, 0.12812491)
texture = ExtResource("4_rif6e")

[node name="Back" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 64.0
offset_top = 512.0
offset_right = 128.0
offset_bottom = 576.0

[connection signal="pressed" from="lvl1_button" to="." method="_on_lvl_1_button_pressed"]
[connection signal="pressed" from="lvl2_button" to="." method="_on_lvl_2_button_pressed"]
[connection signal="pressed" from="lvl3_button" to="." method="_on_lvl_3_button_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
